--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-white">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="{{ url_for('static', filename='css/tailwind.css') }}" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
 </head>
-<body>
-<h1>Login</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.email.label }}<br>
-        {{ form.email(size=32) }}<br>
-        {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=32) }}<br>
-        {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit() }}</p>
-</form>
+<body class="h-full">
+<div class="flex min-h-full flex-col bg-white">
+    <div class="flex min-h-full flex-1">
+        <div class="flex flex-1 flex-col justify-center px-4 py-12 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
+            <div class="mx-auto w-full max-w-sm lg:w-96">
+                <div>
+                    <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&amp;shade=600"
+                         alt="Your Company">
+                    <h2 class="mt-8 text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your
+                        account</h2>
+                    <p class="mt-2 text-sm leading-6 text-gray-500">
+                        Not a member?
+                        <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Start a 14 day free
+                            trial</a>
+                    </p>
+                </div>
+
+                <div class="mt-10">
+                    <form method="POST" class="space-y-6">
+                        {{ form.hidden_tag() }}
+                        <div>
+                            <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email
+                                address</label>
+                            <div class="mt-2">
+                                {{ form.email(class="block w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6") }}
+                                {% for error in form.email.errors %}
+                                    <span class="text-red-500 text-sm">{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+
+                        <div>
+                            <label for="password"
+                                   class="block text-sm font-medium leading-6 text-gray-900">Password</label>
+                            <div class="mt-2">
+                                {{ form.password(class="block w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6") }}
+                                {% for error in form.password.errors %}
+                                    <span class="text-red-500 text-sm">{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center">
+                                <input id="remember-me" name="remember-me" type="checkbox"
+                                       class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                <label for="remember-me" class="ml-3 block text-sm leading-6 text-gray-700">Remember
+                                    me</label>
+                            </div>
+
+                            <div class="text-sm leading-6">
+                                <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Forgot
+                                    password?</a>
+                            </div>
+                        </div>
+
+                        <div>
+                            {{ form.submit(class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="relative hidden w-0 flex-1 lg:block">
+            <img class="absolute inset-0 h-full w-full object-cover"
+                 src="https://images.unsplash.com/photo-1496917756835-20cb06e75b4e?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1908&amp;q=80"
+                 alt="">
+        </div>
+    </div>
+</div>
 </body>
 </html>
