--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -109,7 +109,7 @@
                     console.log('Login successful:', response.data);
                     localStorage.setItem('login', "login");
                     // Redirect to desired route after successful login
-                    {#window.location.href = '/';#}
+                    window.location.href = '/';
                 }).catch(error => {
                     if (error.response) {
                         if (error.response.status === 401) {
