--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -219,6 +219,7 @@
                                     <input v-model="currentUser.name"
                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                            placeholder="John" type="text" id="name">
+                                    <span v-if="errors.name" class="text-red-500 text-sm">[[ errors.name ]]</span>
                                 </div>
                                 <div>
                                     <label for="gender"
@@ -236,7 +237,8 @@
                                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
                                     <input v-model="currentUser.email" type="email" id="email"
                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                           placeholder="John">
+                                           placeholder="example@example.com">
+                                    <span v-if="errors.email" class="text-red-500 text-sm">[[ errors.email ]]</span>
                                 </div>
                                 <div v-if="formMode === 'create'" class="col-span-2">
                                     <label for="password"
@@ -244,6 +246,8 @@
                                     <input v-model="currentUser.password"
                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                            type="password" id="password">
+                                    <span v-if="errors.password"
+                                          class="text-red-500 text-sm">[[ errors.password ]]</span>
                                 </div>
                                 <div class="col-span-2">
                                     <label for="phone"
@@ -271,9 +275,8 @@
                                             [[ role.name ]]
                                         </option>
                                     </select>
+                                    <span v-if="errors.role_id" class="text-red-500 text-sm">[[ errors.role_id ]]</span>
                                 </div>
-
-
                                 <div class="col-span-2">
                                     <button type="submit"
                                             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
@@ -281,6 +284,7 @@
                                     </button>
                                 </div>
                             </div>
+
 
                         </form>
                     </div>
