adding modal open tracker and remove uploads folder

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -217,6 +217,7 @@
                 showCropper: false,
                 cropper: null,
                 userToDelete: null,
+                isModalOpen: false,
                 isDeleteModalOpen: false,
                 errors: {} // Object to store validation errors
             };
