adding category crud with page

--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -265,11 +265,11 @@
                                 </div>
 
                                 <div class="col-span-2 sm:col-span-1">
-                                    <label for="role"
+                                    <label for="role_id"
                                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Role</label>
                                     <select v-model="currentUser.role_id"
                                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                            id="role">
+                                            id="role_id">
                                         <option value="" disabled>Select role</option>
                                         <option v-for="role in roles" :key="role.id" :value="role.id">
                                             [[ role.name ]]
