--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -195,10 +195,15 @@
                         icon: 'M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25'
                     },
                     {
-                        label: 'Team',
+                        label: 'User',
                         href: '/users',
                         icon: 'M15 19.128a9.38 9.38 0 002.625.372 9.337 9.337 0 004.121-.952 4.125 4.125 0 00-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 018.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0111.964-3.07M12 6.375a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zm8.25 2.25a2.625 2.625 0 11-5.25 0 2.625 2.625 0 015.25 0z'
-                    }
+                    },
+                    {
+                        label: 'Category',
+                        href: '/categories',
+                        icon: 'M6.5 11L12 2l5.5 9zm11 11q-1.875 0-3.187-1.312T13 17.5t1.313-3.187T17.5 13t3.188 1.313T22 17.5t-1.312 3.188T17.5 22M3 21.5v-8h8v8z'
+                    },
                 ],
                 currentUser: {
                     id: null,
@@ -219,6 +224,12 @@
                 userToDelete: null,
                 isModalOpen: false,
                 isDeleteModalOpen: false,
+                categories: [], // New state for categories
+                currentCategory: {
+                    id: null,
+                    category_name: '',
+                    description: ''
+                },
                 errors: {} // Object to store validation errors
             };
         },
@@ -229,6 +240,7 @@
             }
             this.fetchUsers();
             this.fetchRoles();
+            this.fetchCategories(); // Fetch categories on mount
         },
         methods: {
             fetchUsers() {
@@ -304,6 +316,7 @@
             closeModal() {
                 this.isModalOpen = false;
                 this.resetCurrentUser();
+                this.resetCurrentCategory();
             },
             handleOutsideClick(event) {
                 if (event.target.id === 'crud-modal') {
@@ -413,6 +426,65 @@
                     .catch(error => {
                         console.error('Error saving user:', error);
                     });
+            },
+            fetchCategories() {
+                axios.get('/api/categories')
+                    .then(response => {
+                        this.categories = response.data;
+                    })
+                    .catch(error => {
+                        console.error('Error fetching categories:', error);
+                    });
+            },
+            openCategoryModal(mode, category = null) {
+                this.formMode = mode;
+                if (mode === 'edit' && category) {
+                    this.currentCategory = {...category};
+                } else {
+                    this.resetCurrentCategory();
+                }
+                this.isModalOpen = true;
+            },
+            saveCategory() {
+                const url = this.formMode === 'create' ? '/api/categories' : `/api/categories/${this.currentCategory.id}`;
+                const method = this.formMode === 'create' ? 'post' : 'put';
+
+                axios({
+                    method: method,
+                    url: url,
+                    data: this.currentCategory
+                })
+                    .then(response => {
+                        if (this.formMode === 'create') {
+                            this.categories.push(response.data);
+                            alert('Category created successfully!');
+                        } else {
+                            const index = this.categories.findIndex(cat => cat.id === this.currentCategory.id);
+                            this.categories.splice(index, 1, response.data);
+                            alert('Category updated successfully!');
+                        }
+                        this.closeModal();
+                    })
+                    .catch(error => {
+                        console.error('Error saving category:', error);
+                    });
+            },
+            deleteCategory(category) {
+                axios.delete(`/api/categories/${category.id}`)
+                    .then(response => {
+                        this.categories = this.categories.filter(cat => cat.id !== category.id);
+                        alert('Category deleted successfully!');
+                    })
+                    .catch(error => {
+                        console.error('Error deleting category:', error);
+                    });
+            },
+            resetCurrentCategory() {
+                this.currentCategory = {
+                    id: null,
+                    category_name: '',
+                    description: ''
+                };
             },
             resetCurrentUser() {
                 this.currentUser = {
